2000-09-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/environments.test:  For tests that rely on garbage
	collection, conservative scanning can be a problem.  Add a comment
	for these tests and make them turn out unresolved if things don't
	work as expected.

2000-09-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/environments.test:  Finished and cleaned up the tests for
	the leaf environments.  Added a complete set of testcases for the
	leaf environment based eval environments.  Started with the tests
	for the import environments.

2000-08-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/environments.test:  Added.

2000-08-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm (pass-if, expect-fail):  Generalized to allow a sequence
	of expressions.

	* tests/eval.test:  Fix documentation test.

2000-06-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/list.test:  Added tests for list-ref, list-set! and
	list-cdr-set!

2000-06-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/common-list.test:  Added.

2000-06-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/eval.test:  Added.

2000-06-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/list.test:  Use cons* instead of list*.

2000-06-13  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* tests/numbers.test, tests/list.test: Updated for new
	documentation module.

2000-05-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/hooks.test:  make-hook-with-name is deprecated.

2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/list.test, tests/numbers.test:  Added.

2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* guile-test:  Eliminate use of catch-test-errors.

	* lib.scm:  Adopted a couple of nice ideas from Greg.

	(pass, fail, expect-failure, expect-failure-if,
	expect-failure-if*, catch-test-errors, catch-test-errors*,
	expected-failure-fluid, pessimist?):  Removed.

	(run-test, expect-fail, result-tags, important-result-tags):
	Added.
