@@ -20,6 +20,15 @@
 
 (use-modules (test-suite lib))
 
+
+(expect-fail "string=? does not accept symbols"
+  (catch 'wrong-type-arg
+    (lambda ()
+      (string=? 'a 'b)
+      #f)
+    (lambda args
+      #t)))
+
 (pass-if "string<? respects string length"
 	 (not (string<? "foo\0" "foo")))
 (pass-if "string-ci<? respects string length"
